# libzplay_fixed

./: LICENSE  README.md  libzplay_final_merge.7z  out_fine.7z  out_lite.7z  out_lite_upx.7z
out_fine/: BUILD_STATUS.md  CMakeLists.txt  README.md  TEST_CASES.md  build.ps1  build_log_detailed.txt  builder.cpp  verifier.cpp
out_fine/build_cmake/llvm-22_MSVCRT_debug_-O0/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
out_fine/build_cmake/llvm-22_MSVCRT_debug_-O3/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
out_fine/build_cmake/llvm-22_MSVCRT_debug_-OF/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
out_fine/build_cmake/llvm-22_MSVCRT_debug_-Os/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
out_fine/build_cmake/llvm-22_MSVCRT_release_-O0/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
out_fine/build_cmake/llvm-22_MSVCRT_release_-O3/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
out_fine/build_cmake/llvm-22_MSVCRT_release_-OF/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
out_fine/build_cmake/llvm-22_MSVCRT_release_-Os/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
out_fine/build_cmake/llvm-22_UCRT_debug_-O0/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
out_fine/build_cmake/llvm-22_UCRT_debug_-O3/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
out_fine/build_cmake/llvm-22_UCRT_debug_-OF/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
out_fine/build_cmake/llvm-22_UCRT_debug_-Os/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
out_fine/build_cmake/llvm-22_UCRT_release_-O0/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
out_fine/build_cmake/llvm-22_UCRT_release_-O3/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
out_fine/build_cmake/llvm-22_UCRT_release_-OF/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
out_fine/build_cmake/llvm-22_UCRT_release_-Os/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
out_fine/build_cmake/llvm_MSVCRT_debug_-O0/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
out_fine/build_cmake/llvm_MSVCRT_debug_-O3/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
out_fine/build_cmake/llvm_MSVCRT_debug_-OF/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
out_fine/build_cmake/llvm_MSVCRT_debug_-Os/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
out_fine/build_cmake/llvm_MSVCRT_release_-O0/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
out_fine/build_cmake/llvm_MSVCRT_release_-O3/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
out_fine/build_cmake/llvm_MSVCRT_release_-OF/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
out_fine/build_cmake/llvm_MSVCRT_release_-Os/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
out_fine/build_cmake/llvm_UCRT_debug_-O0/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
out_fine/build_cmake/llvm_UCRT_debug_-O3/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
out_fine/build_cmake/llvm_UCRT_debug_-OF/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
out_fine/build_cmake/llvm_UCRT_debug_-Os/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
out_fine/build_cmake/llvm_UCRT_release_-O0/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
out_fine/build_cmake/llvm_UCRT_release_-O3/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
out_fine/build_cmake/llvm_UCRT_release_-OF/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
out_fine/build_cmake/llvm_UCRT_release_-Os/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
out_fine/build_cmake/mingw-x64_MSVCRT_debug_-O0/: CMakeCache.txt  Makefile  cmake_install.cmake
out_fine/build_cmake/mingw-x64_MSVCRT_debug_-O3/: CMakeCache.txt  Makefile  cmake_install.cmake
out_fine/build_cmake/mingw-x64_MSVCRT_debug_-OF/: CMakeCache.txt  Makefile  cmake_install.cmake
out_fine/build_cmake/mingw-x64_MSVCRT_debug_-Os/: CMakeCache.txt  Makefile  cmake_install.cmake
out_fine/build_cmake/mingw-x64_MSVCRT_release_-O0/: CMakeCache.txt  Makefile  cmake_install.cmake
out_fine/build_cmake/mingw-x64_MSVCRT_release_-O3/: CMakeCache.txt  Makefile  cmake_install.cmake
out_fine/build_cmake/mingw-x64_MSVCRT_release_-OF/: CMakeCache.txt  Makefile  cmake_install.cmake
out_fine/build_cmake/mingw-x64_MSVCRT_release_-Os/: CMakeCache.txt  Makefile  cmake_install.cmake
out_fine/build_cmake/mingw-x64_UCRT_debug_-O0/: CMakeCache.txt  Makefile  cmake_install.cmake
out_fine/build_cmake/mingw-x64_UCRT_debug_-O3/: CMakeCache.txt  Makefile  cmake_install.cmake
out_fine/build_cmake/mingw-x64_UCRT_debug_-OF/: CMakeCache.txt  Makefile  cmake_install.cmake
out_fine/build_cmake/mingw-x64_UCRT_debug_-Os/: CMakeCache.txt  Makefile  cmake_install.cmake
out_fine/build_cmake/mingw-x64_UCRT_release_-O0/: CMakeCache.txt  Makefile  cmake_install.cmake
out_fine/build_cmake/mingw-x64_UCRT_release_-O3/: CMakeCache.txt  Makefile  cmake_install.cmake
out_fine/build_cmake/mingw-x64_UCRT_release_-OF/: CMakeCache.txt  Makefile  cmake_install.cmake
out_fine/build_cmake/mingw-x64_UCRT_release_-Os/: CMakeCache.txt  Makefile  cmake_install.cmake
out_fine/build_cmake/mingw-x86_MSVCRT_debug_-O0/: CMakeCache.txt  Makefile  cmake_install.cmake
out_fine/build_cmake/mingw-x86_MSVCRT_debug_-O3/: CMakeCache.txt  Makefile  cmake_install.cmake
out_fine/cmake/: mingw-x64.cmake
out_lite/src_x86/: CMakeLists.txt
(+2217 files in other folders)
